--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dao3up",
   "main": "dist/api.js",
   "description": "适用于ArenaPro的构建/上传工具CLI",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "type": "module",
   "author": "Tobylai",
   "repository": {
@@ -13,16 +13,15 @@
     "@types/bun": "latest",
     "commander": "^13.1.0",
     "consola": "^3.4.2",
-    "prompts": "^2.4.2"
-  },
-  "peerDependencies": {},
-  "dependencies": {
+    "prompts": "^2.4.2",
     "@inquirer/prompts": "^7.6.0",
     "@types/configstore": "^6.0.2",
     "@types/prompts": "^2.4.9",
     "configstore": "^7.0.0",
     "typescript": "^5.8.3"
   },
+  "peerDependencies": {},
+  "dependencies": {},
   "bin": {
     "dao3up": "dist/index.js"
   },
